<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/noteCardItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/noteTitleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/white"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/deleteItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-3dp"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:src="@drawable/baseline_delete_orange_24" />

            <ImageView
                android:id="@+id/editNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_toStartOf="@+id/deleteItemButton"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:src="@drawable/baseline_edit_note_24" />

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/noteContentItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:maxLines="3" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
