<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.notepad.ui.NoteViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/noteListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.NoteListFragment">


        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/notepadLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/app_name"
                android:textColor="@color/orange"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="14dp"
                android:backgroundTint="@color/orange"
                android:clickable="true"
                android:src="@drawable/baseline_note_add_24"
                android:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancelSelectedItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="14dp"
                android:backgroundTint="@color/orange"
                android:src="@drawable/baseline_cancel_24"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/multiSelectMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:backgroundTint="@color/orange"
                android:visibility="gone"
                app:srcCompat="@drawable/baseline_delete_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noteList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_container"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:scrollbars="vertical" />

    </RelativeLayout>
</layout>