<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.notepad.ui.NoteViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/addOrModifyNoteLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.NoteEditableFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addOrUpdateNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/add_note"
                android:textColor="@color/orange"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Spinner
                android:id="@+id/colorSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circular_background"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/saveNoteButton"
                android:layout_width="51dp"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="3dp"
                android:src="@drawable/baseline_done_24"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/note_title_hint"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={viewmodel.title}"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editTitle"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note_content_hint"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:text="@={viewmodel.content}"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            android:contentDescription="Delete Note"
            android:focusable="true"
            android:src="@drawable/baseline_delete_24" />

    </RelativeLayout>
</layout>
